# MCP-test-platform

./: README.md  config.py  generic_optimize.py  llm_client.py  mcp_server.py  metric.py  optimize_with_prompt.py  pyproject.toml  utils.py
prompt/genetic/: exaggerated_time.csv
prompt/optimize_with_prompt/: exaggerated_time.csv
