[project]
name = "mpma"
version = "0.1.0"
description = "MPMA: Preference Manipulation Attack Against Model Context Protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "MPMA Research Team" }
]
keywords = ["mcp", "llm", "security", "agent"]

dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "fastmcp>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
